@@ -534,3 +534,5 @@ LAYER 2 has all the objects in colour, the tilemap is used to hide them to a mon
 -bit scroll medio pixel de ula. registro 0x68.  bit 2 = ULA half pixel scroll (may change) (soft reset = 0)
 
 
+-probar si modo (o bit?) de tiles over ula funciona
+
